[gd_scene load_steps=2 format=3 uid="uid://dtycemk1wxpdj"]

[ext_resource type="Script" uid="uid://5cy15nkepste" path="res://codigo/menu_muerte.gd" id="1_e28x8"]

[node name="MenuMuerte" type="Control"]
process_mode = 3
process_priority = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e28x8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -16.0
offset_top = -11.0
offset_right = 24.0
offset_bottom = 29.0
scale = Vector2(3.01065, 3.1828)
color = Color(0, 0, 0, 0.372549)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Continuar?"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Button2")
text = "Cargar"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Button")
text = "Salir"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
